[gd_scene load_steps=9 format=3 uid="uid://neahklk07aj0"]

[ext_resource type="Script" uid="uid://up6yugdwxecr" path="res://scenes/player.gd" id="1_h83s3"]
[ext_resource type="Texture2D" uid="uid://sxtutgm14sxb" path="res://assets/Sprites/jugador.png" id="2_2hx4a"]
[ext_resource type="AudioStream" uid="uid://dftupmxrkhh4w" path="res://assets/sfx/shoot.wav" id="3_qhqgy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_adpuw"]
size = Vector2(14.75, 6)

[sub_resource type="Animation" id="Animation_eu6er"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_qp447"]
resource_name = "destroyed"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"eliminated"
}]
}

[sub_resource type="Animation" id="Animation_7in6o"]
resource_name = "life"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pq0yt"]
_data = {
&"RESET": SubResource("Animation_eu6er"),
&"destroyed": SubResource("Animation_qp447"),
&"life": SubResource("Animation_7in6o")
}

[node name="player" type="CharacterBody2D" groups=["tank"]]
position = Vector2(127, 240)
script = ExtResource("1_h83s3")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_2hx4a")
hframes = 2
frame = 1
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_adpuw")
metadata/_edit_group_ = true

[node name="LaserMarker" type="Marker2D" parent="."]
metadata/_edit_group_ = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pq0yt")
}
autoplay = "life"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qhqgy")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qhqgy")

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
